Python-pyhsm NEWS -- History of user-visible changes.          -*- outline -*-

* version 1.0.4m (unreleased)

** Restructured the repository and build process.
** Added support for a "soft" HSM in yhsm-yubikey-ksm and yhsm-import-keys.

* Version 1.0.4l (released 2015-08-24)

** Documentation is now in asciidoc format.

** yhsm-yubikey-ksm: Fix bug when the same public ID occured for multiple
keyhandles.

* Version 1.0.4k (released 2014-09-18)

** yhsm-db-import, yhsm-db-export: Fix syntax error.

* Version 1.0.4j (released 2014-09-16)

** yhsm-yubikey-ksm: Fix syntax error.

* Version 1.0.4i (released 2014-09-16)

** yhsm-yubikey-ksm: Add --daemon.

** yhsm-yubikey-ksm: Add --db-url to specify SQL database path to AEAD store.

** yhsm-db-import, yhsm-db-export: New tools to do database import/export.

** Documentation cleanup.

* Version 1.0.4h (released 2014-01-09)

** yhsm-daemon: Use JSON messages instead of Python pickling.
(as suggested by Rogdham)

* Version 1.0.4g (released 2013-05-06)

** yhsm-daemon: Support listening to non-loopback interfaces.
** yhsm-daemon: Forward exceptions to the client.
** yhsm-daemon: Handle device unavailable, and attempt to recover.

* Version 1.0.4f (released 2013-04-12)

** Fix failing test.

** Support URLs in device field, for more info see:
http://pyserial.sourceforge.net/pyserial_api.html#serial.serial_for_url

** Added yhsm-daemon.

* Version 1.0.4e (released 2013-04-06)

** yhsm-decrypt-aead: For yubikey-csv output, fix prefix field.
Before the prefix was set to the AEAD nonce which is only correct for
old style AEAD files.  Now it uses the AEAD filename for the prefix
field.

** yhsm-decrypt-aead: Improve diagnostic messages.
Errors and warnings are now printed to standard error.  The count of
number of failed and processsed AEADs should now be accurate.

* Version 1.0.4d (released 2013-03-18)

** Fix so that yhsm-yubikey-ksm can work with the older format.

* Version 1.0.4c (released 2013-03-18)
