@@ -3,7 +3,8 @@ Python-pyhsm NEWS -- History of user-visible changes.          -*- outline -*-
 * version 1.0.4m (unreleased)
 
 ** Restructured the repository and build process.
-** Added support for a "soft" HSM in yhsm-yubikey-ksm and yhsm-import-keys.
+** Added support for a "soft" HSM in yhsm-yubikey-ksm, yhsm-import-keys
+   and yhsm-generate-keys.
 
 * Version 1.0.4l (released 2015-08-24)
 
